Fixed problem with focus not showing when DialogStage is not focused; Resume position now only stored if video was atleast active for 30 seconds

--- a/Mediasystem/src/main/resources/select-media/resume-dialog.css
+++ b/Mediasystem/src/main/resources/select-media/resume-dialog.css
@@ -17,7 +17,7 @@
   -fx-background-color: transparent;
 }
 
-.resume-dialog .button:focused {
+.resume-dialog .button.focused {
   -fx-background-color: radial-gradient(radius 150%, color-blue-20, color-blue-10, color-blue-20);
   -fx-text-fill: white;
 }
